--- a/src/content/blog/02-08-23.md
+++ b/src/content/blog/02-08-23.md
@@ -1,5 +1,5 @@
 ---
-title: 'СЛОВА БЫСТРО ЗАБЫВАЮТСЯ, НО ПРАСАД ВСЕГДА ОЧИЩАЕТ ТОГО, КТО ЕГО ПРОБУЕТ'
+title: 'МЫ ПРОСТО ХОТЕЛИ СЛУЖИТЬ, А КОГДА КРИШНА ЗАХОЧЕТ, ОН НАС ЗАБЕРЕТ'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Sep 02 2023'
 heroImage: '/photo_2023-06-27_21-47-20.jpg'
