--- a/src/content/blog/03-08-23.md
+++ b/src/content/blog/03-08-23.md
@@ -1,5 +1,5 @@
 ---
-title: 'СЛОВА БЫСТРО ЗАБЫВАЮТСЯ, НО ПРАСАД ВСЕГДА ОЧИЩАЕТ ТОГО, КТО ЕГО ПРОБУЕТ'
+title: 'Вриндаван - единственная уединенная трансцендентная обитель в этой вселенной, где автоматически проявляется  Сознание Кришны'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Sep 02 2023'
 heroImage: '/photo_2023-06-28_10-32-10.jpg'
